--- a/koth/index.html
+++ b/koth/index.html
@@ -110,19 +110,23 @@
     <div class="content-container">
       <!-- Left side for Images -->
       <div class="image-container">
-        <!-- First Image (Main Image) -->
-        <img src="../media/kothcard.png" alt="King of the Hill Card" class="lightbox-image">
         
-        <!-- Second Image (New Image below the first) -->
-        <img src="../media/kothboarddiagram.png" alt="Additional Image" class="lightbox-image">
+ <div class="kothdiagram-container">
+        <img src="kothdiagram.jpg" class="kothdiagram-image" alt="Kothdiagram">
       </div>
       
      <!-- Right side for Text -->
 <div class="text-container">
   <!-- First Title and Text -->
+  <h2 class="additional-title">Introduction and Setup</h2>
   <p class="lightbox-text">
     King of the Hill can be played with 2, 3, or 4 players. Each player takes one side of the board, assembling their army in any configuration across 22 tiles (see the red regions in the lower-left-hand image). However, the king MUST sit on the middle diamond tile (see the orange diamonds in the lower-left-hand image). Players should take turns placing their remaining 15 units (5 dragons, 5 knights, and 5 wizards) as they may want to set up tactically to face an opposing army. This red-zone is a safe area, meaning no attacking can take place by any unit; however, opposing units may move into other red-zones. Once all units have been placed, play can begin.
   </p>
+
+   <!-- Second image: Kothcard, placed above the title -->
+      <div class="kothcard-container">
+        <img src="kothcard.jpg" class="kothcard-image" alt="Kothcard">
+      </div>
 
   <!-- New Title and Text Below -->
   <h2 class="additional-title">Taking Turns and Unit Types</h2>
