--- a/koth/index.html
+++ b/koth/index.html
@@ -143,6 +143,7 @@
         </div>
       </div>
     </div>
+  </div>
 
     <!-- Bottom Image (Not part of the lightbox) -->
     <img src="../media/kothlandscape.png" alt="Bottom Image" class="bottom-image">
