--- a/koth/index.html
+++ b/koth/index.html
@@ -112,7 +112,7 @@
       <div class="image-container">
         
  <div class="kothdiagram-container">
-        <img src="kothdiagram.jpg" class="kothdiagram-image" alt="Kothdiagram">
+        <img src="../media/kothdiagram.png" class="kothdiagram-image" alt="Kothdiagram">
       </div>
       
      <!-- Right side for Text -->
@@ -125,7 +125,7 @@
 
    <!-- Second image: Kothcard, placed above the title -->
       <div class="kothcard-container">
-        <img src="kothcard.jpg" class="kothcard-image" alt="Kothcard">
+        <img src="../media/kothcard.png" class="kothcard-image" alt="Kothcard">
       </div>
 
   <!-- New Title and Text Below -->
