--- a/koth/index.html
+++ b/koth/index.html
@@ -112,7 +112,7 @@
       <div class="image-container">
         
  <div class="kothdiagram-container">
-        <img src="../media/kothdiagram.png" class="kothdiagram-image" alt="Kothdiagram">
+        <img src="../media/kothboarddiagram.png" class="kothdiagram-image" alt="Kothdiagram">
       </div>
       
      <!-- Right side for Text -->
