--- a/koth/index.html
+++ b/koth/index.html
@@ -114,27 +114,29 @@
 
 <!-- Right side for Text -->
 <div class="text-container">
-<div class="kothdiagram-container">
-  <img src="../media/kothboarddiagram.png" class="kothdiagram-image" alt="Kothdiagram">
-</div>
 
 
   <!-- First Title and Text -->
   <h2 class="additional-title">Introduction and Setup</h2>
   <p class="lightbox-text">
-    King of the Hill can be played with 2, 3, or 4 players. Each player takes one side of the board, assembling their army in any configuration across 22 tiles (see the red regions in the lower-left-hand image). However, the king MUST sit on the middle diamond tile (see the orange diamonds in the lower-left-hand image). Players should take turns placing their remaining 15 units (5 dragons, 5 knights, and 5 wizards) as they may want to set up tactically to face an opposing army. This red-zone is a safe area, meaning no attacking can take place by any unit; however, opposing units may move into other red-zones. Once all units have been placed, play can begin.
+    King of the Hill can be played with 2, 3, or 4 players. Each player takes one side of the board, assembling their army in any configuration across 22 tiles (see the red regions in the image below). However, the king MUST sit on the middle diamond tile (see the orange diamonds in the image below). Players should take turns placing their remaining 15 units (5 dragons, 5 knights, and 5 wizards) as they may want to set up tactically to face an opposing army. This red-zone is a safe area, meaning no attacking can take place by any unit; however, opposing units may move into other red-zones. Once all units have been placed, play can begin.
+  </p>
+
+  <div class="kothdiagram-container">
+  <img src="../media/kothboarddiagram.png" class="kothdiagram-image" alt="Kothdiagram">
+</div>
+
+
+  <!-- New Title and Text Below -->
+  <h2 class="additional-title">Taking Turns and Unit Types</h2>
+  <p class="lightbox-text">
+    Each player takes turns moving one of their units. If a unit can legally attack another piece, the player may choose to do so, removing the opposing unit from the board. The infographic below shows the unit movement and attack ranges, where a dragon may only attack a knight, a knight may only attack a wizard or another knight, and a wizard may only attack a dragon. Additionally, all units may attack the king, and the king can attack all units. The dragon can move 2 tiles in any straight line (except to octagonal ones) but can only attack adjacent knights/kings; the knight may move to any adjacent tile and, only if it is currently on an octagonal tile, to any other octagonal tile along its row (before the hill tile); the wizard may move to any adjacent tile but can attack dragons/kings that are 2 tiles away in any straight line (essentially an inverse dragon). Any unit that attacks another unit shall take its place, unless it is a non-knight unit attacking a knight (i.e., a dragon) on an octagonal tile, in which case the knight is still removed from the board, but the attacking dragon stays on its current tile.
   </p>
 
    <!-- Second image: Kothcard, placed above the title -->
       <div class="kothcard-container">
         <img src="../media/kothcard.png" class="kothcard-image" alt="Kothcard">
       </div>
-
-  <!-- New Title and Text Below -->
-  <h2 class="additional-title">Taking Turns and Unit Types</h2>
-  <p class="lightbox-text">
-    Each player takes turns moving one of their units. If a unit can legally attack another piece, the player may choose to do so, removing the opposing unit from the board. The upper-left-hand infographic shows the unit movement and attack ranges, where a dragon may only attack a knight, a knight may only attack a wizard or another knight, and a wizard may only attack a dragon. Additionally, all units may attack the king, and the king can attack all units. The dragon can move 2 tiles in any straight line (except to octagonal ones) but can only attack adjacent knights/kings; the knight may move to any adjacent tile and, only if it is currently on an octagonal tile, to any other octagonal tile along its row (before the hill tile); the wizard may move to any adjacent tile but can attack dragons/kings that are 2 tiles away in any straight line (essentially an inverse dragon). Any unit that attacks another unit shall take its place, unless it is a non-knight unit attacking a knight (i.e., a dragon) on an octagonal tile, in which case the knight is still removed from the board, but the attacking dragon stays on its current tile.
-  </p>
 
   <!-- Third Title and Text -->
   <h2 class="additional-title">Endgame</h2>
