--- a/koth/index.html
+++ b/koth/index.html
@@ -91,7 +91,7 @@
 </div>
 
     <!-- Lightbox -->
-    <div class="lightbox" id="lightbox">
+    <div class="firstlightbox" id="firstlightbox">
       <img id="lightbox-img" alt="Enlarged Image">
     </div>
 
