--- a/micro/index.html
+++ b/micro/index.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KOTH</title>
+  <link rel="stylesheet" href="../styles.css">
+ <!-- Standard favicon -->
+  <link rel="icon" href="../favicon.png" type="image/png">
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="../favicon-180x180.png">
+
+  <!-- Optional for higher resolution screens -->
+  <link rel="icon" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="icon" sizes="48x48" href="../favicon-48x48.png">
+  <link rel="icon" sizes="96x96" href="../favicon-96x96.png">
+  <link rel="icon" sizes="192x192" href="../favicon-192x192.png">
+</head>
+  
+<body>
+  <div class="loading-screen">
+    <img src="../logos/logo.gif" alt="Loading...">
+</div>
+
+ <!-- Top Banner -->
+<div class="top-banner">
+  <div class="logo">
+    <a href="/" class="logo-link">
+      <img 
+        src="../logos/logo.png" 
+        data-gif="../logos/logo.gif" 
+        data-duration="1520"
+        alt="Logo" 
+        class="logo-img"
+      >
+    </a>
+  </div>
+  <div class="menu">
+    <a href="#Connect">Connect</a>
+  </div>
+</div>
+
+
+  <!-- Page Content -->
+
+   <div class="main-container">
+        <!-- Left Section (Text Box + Button) -->
+        <div class="text-box">
+            <p class="text-content">
+                Lattice or mesh-like structures can be successful 3D printed using a conventional [FDM] 3D printer with micro-level strings to a degree that is not possible using standard 3D slicing protocols. GCODE - the code that defines the movement and parameters of a [FDM] 3D printer - can be defined directly, however, the extremely complex nature of defining geometry whilst simultaneously controlling these parameters makes it a tedious task. A program written by Andy Gleadall, called FullControl, packages a direct way of controlling GCODE in a usable interface. This is how such lattices and meshes were made.
+            </p>
+            <button class="read-paper-btn">Read Paper</button>
+        </div>
+
+        <!-- Right Section (Video) -->
+        <div class="video-box">
+            <video controls>
+                <source src="../media/micro.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+
+
+    <!-- Timeline Section -->
+    <div class="timeline">
+        <h2>Project Timeline</h2>
+        <div class="timeline-events">
+            <div class="timeline-event">
+                <img src="path-to-image-1.jpg" alt="Event 1">
+                <p>Event description 1</p>
+            </div>
+            <div class="timeline-event">
+                <img src="path-to-image-2.jpg" alt="Event 2">
+                <p>Event description 2</p>
+            </div>
+            <div class="timeline-event">
+                <img src="path-to-image-3.jpg" alt="Event 3">
+                <p>Event description 3</p>
+            </div>
+            <!-- Add more events as needed -->
+        </div>
+    </div>
+
+</body>
+</html>
 
