--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
   <div class="divider"></div>
   <!-- Second Row -->
   <div class="second-row">
+     <a href="/micro-3D-Printing" class="column-link">
     <picture>
       <source srcset="media/MicroPrints.webp" type="image/webp">
       <img src="media/MicroPrints.png" alt="Second Banner Image" class="banner">
     </picture>
+     </a>
     <img src="logos/fullcontrol.png" alt="Second Logo Overlay" class="logo-overlay">
     <img src="logos/durham.png" alt="Logo Above" class="logo-above">
   </div>
