--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -46,13 +46,19 @@
   <!-- Page Content -->
 
    <div class="main-container">
-        <!-- Left Section (Text Box + Button) -->
-        <div class="text-box">
-            <p class="text-content">
-                Lattice or mesh-like structures can be successful 3D printed using a conventional [FDM] 3D printer with micro-level strings to a degree that is not possible using standard 3D slicing protocols. GCODE - the code that defines the movement and parameters of a [FDM] 3D printer - can be defined directly, however, the extremely complex nature of defining geometry whilst simultaneously controlling these parameters makes it a tedious task. A program written by Andy Gleadall, called FullControl, packages a direct way of controlling GCODE in a usable interface. This is how such lattices and meshes were made.
-            </p>
-            <button class="read-paper-btn">Read Paper</button>
-        </div>
+        <!-- Left Section (Logo, Text Box + Button) -->
+<div class="text-box">
+    <!-- Logo -->
+    <img src="../media/micro.png" alt="Logo" class="logo">
+
+    <!-- Text Content -->
+    <p class="text-content">
+        Lattice or mesh-like structures can be successfully 3D printed using a conventional [FDM] 3D printer with micro-level strings to a degree that is not possible using standard 3D slicing protocols. GCODE - the code that defines the movement and parameters of a [FDM] 3D printer - can be defined directly, however, the extremely complex nature of defining geometry whilst simultaneously controlling these parameters makes it a tedious task. A program written by Andy Gleadall, called FullControl, packages a direct way of controlling GCODE in a usable interface. This is how such lattices and meshes were made.
+    </p>
+    
+    <!-- Read Paper Button -->
+    <button class="read-paper-btn">Read Paper</button>
+</div>
 
         <!-- Right Section (Video) -->
         <div class="video-box">
