--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -62,13 +62,12 @@
 
         <!-- Right Section (Video) -->
         <div class="video-box">
-            <video controls>
+            <video class="video" autoplay muted loop>
                 <source src="../media/micro.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
     </div>
-
 
     <!-- Timeline Section -->
     <div class="timeline">
