--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -49,7 +49,7 @@
         <!-- Left Section (Logo, Text Box + Button) -->
 <div class="text-box">
     <!-- Logo -->
-    <img src="../media/micro.png" alt="Logo" class="logo">
+    <img src="../media/micro.png" alt="MicroLogo" class="Micrologo">
 
     <!-- Text Content -->
     <p class="text-content">
