--- a/koth/index.html
+++ b/koth/index.html
@@ -19,7 +19,7 @@
   <link rel="icon" sizes="192x192" href="../favicon-192x192.png">
 </head>
   
-<body>
+<body class="koth">
   <div class="loading-screen">
     <img src="../logos/logo.gif" alt="Loading...">
 </div>
