--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -71,7 +71,7 @@
 
     <!-- Timeline Section -->
     <div class="timeline">
-        <h2>Project Timeline</h2>
+        <h2>An application to penetrate cell membranes</h2>
         <div class="timeline-events">
             <div class="timeline-event">
                 <img src="path-to-image-1.jpg" alt="Event 1">
@@ -88,6 +88,14 @@
             <!-- Add more events as needed -->
         </div>
     </div>
+
+   <div class="image-container">
+        <!-- Initial Image -->
+        <img src="mesh.png" alt="Initial Image" class="image zoomable" id="initial-image">
+        <!-- Replacement Image -->
+        <img src="meshcloseup.png" alt="Zoomed-in Image" class="image hidden" id="zoomed-image">
+    </div>
+    <script src="script.js"></script>
 
     <script src="../main.js"></script>
 
