--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -91,9 +91,9 @@
 
    <div class="image-container">
         <!-- Initial Image -->
-        <img src="mesh.png" alt="Initial Image" class="image zoomable" id="initial-image">
+        <img src="../media/mesh.png" alt="Initial Image" class="image zoomable" id="initial-image">
         <!-- Replacement Image -->
-        <img src="meshcloseup.png" alt="Zoomed-in Image" class="image hidden" id="zoomed-image">
+        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="image hidden" id="zoomed-image">
     </div>
     <script src="script.js"></script>
 
