--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -103,11 +103,11 @@
     <div class="text-container">
         <h1>Zoomable Image with Text</h1>
         <p>
-               - In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. If the mesh strings and the cellular sizes are similar, it is possible for the cell membranes to be broken allowing drugs/chemicals to be administered into the cells before the membranes chemically re-form. A mesh was formed to fit this purpose 
-            </p>
-        </div>
+               In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. If the mesh strings and the cellular sizes are similar, it is possible for the cell membranes to be broken allowing drugs/chemicals to be administered into the cells before the membranes chemically re-form. A mesh was formed to fit this purpose 
+        </p>
     </div>
-    <script src="script.js"></script>
+</div>
+  
 
     <script src="../main.js"></script>
 
