--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -89,24 +89,28 @@
         </div>
     </div>
 <div class="content-container">
-   <div class="image-container">
+    <div class="image-container">
         <!-- Initial Image -->
         <img src="../media/mesh.png" alt="Initial Image" class="image zoomable" id="initial-image">
         <!-- Replacement Image -->
         <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="image hidden" id="zoomed-image">
-    <!-- Title with Arrow -->
+        
+        <!-- Title with Arrow -->
         <div class="zoom-title">
             Tap to zoom in 
             <span class="arrow">⬇</span>
         </div>
     </div>
     <div class="text-container">
-        <h1>Zoomable Image with Text</h1>
+        <h1>Tap to Zoom</h1>
         <p>
-               In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. If the mesh strings and the cellular sizes are similar, it is possible for the cell membranes to be broken allowing drugs/chemicals to be administered into the cells before the membranes chemically re-form. A mesh was formed to fit this purpose 
+            In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. 
+            If the mesh strings and the cellular sizes are similar, it is possible for the cell membranes to be broken, allowing drugs/chemicals to be administered into the cells before the membranes chemically re-form. 
+            A mesh was formed to fit this purpose.
         </p>
     </div>
 </div>
+
   
 
     <script src="../main.js"></script>
