--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -88,20 +88,20 @@
             <!-- Add more events as needed -->
         </div>
     </div>
-<div class="content-container">
-    <div class="image-container">
+<div class="mesh-content-container">
+    <div class="mesh-image-container">
         <!-- Initial Image -->
-        <img src="../media/mesh.png" alt="Initial Image" class="image zoomable" id="initial-image">
+        <img src="../media/mesh.png" alt="Initial Image" class="mesh-image zoomable" id="initial-image">
         <!-- Replacement Image -->
-        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="image hidden" id="zoomed-image">
+        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="mesh-image hidden" id="zoomed-image">
         
         <!-- Title with Arrow -->
-        <div class="zoom-title">
+        <div class="mesh-zoom-title">
             Tap to zoom in 
-            <span class="arrow">⬇</span>
+            <span class="mesh-arrow">⬇</span>
         </div>
     </div>
-    <div class="text-container">
+    <div class="mesh-text-container">
         <h1>Tap to Zoom</h1>
         <p>
             In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. 
