--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -91,10 +91,9 @@
 <div class="mesh-content-container">
     <div class="mesh-image-container">
         <!-- Initial Image -->
-        <img src="../media/mesh.png" alt="Initial Image" class="mesh-image zoomable" id="initial-image">
+        <img src="../media/mesh.png" alt="Initial Image" class="mesh-image" id="initial-image">
         <!-- Replacement Image -->
-        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="mesh-image hidden" id="zoomed-image">
-        
+        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="mesh-image mesh-hidden" id="zoomed-image">
         <!-- Title with Arrow -->
         <div class="mesh-zoom-title">
             Tap to zoom in 
@@ -102,14 +101,13 @@
         </div>
     </div>
     <div class="mesh-text-container">
-        <h1>Tap to Zoom</h1>
+        <h1>An application to penetrate cellular membranes</h1>
         <p>
-            In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. 
-            If the mesh strings and the cellular sizes are similar, it is possible for the cell membranes to be broken, allowing drugs/chemicals to be administered into the cells before the membranes chemically re-form. 
-            A mesh was formed to fit this purpose.
+            In existing biological research, fine grid meshes comprised of nylon strings with diameters of 50µm are used to interact with cells by attaching a cluster of cells to the mesh and uniformly pulling it apart. If the mesh strings and the cellular sizes are similar, it is possible for the cell membranes to be broken allowing drugs/chemicals to be administered into the cells before the membranes chemically re-form. A mesh was formed to fit this purpose.
         </p>
     </div>
 </div>
+
 
   
 
