--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -90,15 +90,15 @@
     </div>
 <div class="mesh-content-container">
     <div class="mesh-image-container">
-        <!-- Initial Image -->
-        <img src="../media/mesh.png" alt="Initial Image" class="mesh-image" id="initial-image">
-        <!-- Replacement Image -->
-        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="mesh-image mesh-hidden" id="zoomed-image">
         <!-- Title with Arrow -->
         <div class="mesh-zoom-title">
             Tap to zoom in 
             <span class="mesh-arrow">⬇</span>
         </div>
+        <!-- Initial Image -->
+        <img src="../media/mesh.png" alt="Initial Image" class="mesh-image" id="initial-image">
+        <!-- Replacement Image (Zoomed-in) -->
+        <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="mesh-image mesh-hidden" id="zoomed-image">
     </div>
     <div class="mesh-text-container">
         <h1>An application to penetrate cellular membranes</h1>
