--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -71,19 +71,25 @@
 
     <!-- Timeline Section -->
     <div class="timeline">
-        <h2>An application to penetrate cell membranes</h2>
+        <h2>Example Mesh Designs</h2>
         <div class="timeline-events">
             <div class="timeline-event">
-                <img src="path-to-image-1.jpg" alt="Event 1">
-                <p>Event description 1</p>
+                <img src="../media/mesh1.png" alt="Event 1">
+                <p>A TPU dodecagonal mesh; 960 strings</p>
             </div>
+          <div class="timeline-event">
+              <img src="../media/mesh2.png" alt="Event 2">
+              <p>
+                  A mesh made from 
+                  <a href="https://fiberlogy.com/en/fiberlogy-filaments/filament-fiberflex-40d/" target="_blank" style="color: #93aacc; text-decoration: none;">
+                      FibreFlex
+                  </a> 
+                  durable material.
+              </p>
+          </div>
             <div class="timeline-event">
-                <img src="path-to-image-2.jpg" alt="Event 2">
-                <p>Event description 2</p>
-            </div>
-            <div class="timeline-event">
-                <img src="path-to-image-3.jpg" alt="Event 3">
-                <p>Event description 3</p>
+                <img src="../media/mesh3.png" alt="Event 3">
+                <p> Layers of stacked TPU meshes acting as a liquid filter; 2700 strings in total</p>
             </div>
             <!-- Add more events as needed -->
         </div>
