--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -56,8 +56,8 @@
         Lattice or mesh-like structures can be successfully 3D printed using a conventional [FDM] 3D printer with micro-level strings to a degree that is not possible using standard 3D slicing protocols. GCODE - the code that defines the movement and parameters of a [FDM] 3D printer - can be defined directly, however, the extremely complex nature of defining geometry whilst simultaneously controlling these parameters makes it a tedious task. A program written by Andy Gleadall, called FullControl, packages a direct way of controlling GCODE in a usable interface. This is how such lattices and meshes were made.
     </p>
     
-    <!-- Read Paper Button -->
-    <button class="read-paper-btn">Read Paper</button>
+   <!-- Read Paper Button -->
+<button class="read-paper-btn" onclick="openPDF()">Read Paper</button>
 </div>
 
         <!-- Right Section (Video) -->
