--- a/index.html
+++ b/index.html
@@ -44,44 +44,32 @@
 <div class="container">
   <!-- First Row -->
   <div class="first-row">
-    <picture>
-      <source srcset="media/StoolBanner.webp" type="image/webp">
-      <img src="media/StoolBanner.png" alt="Banner Image" class="banner">
-    </picture>
-    <img src="logos/rca.png" alt="Logo Overlay" class="logo-overlay">
+      <img src="media/StoolBanner.webp" alt="Banner Image" class="banner">
+    <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
   <!-- Second Row -->
   <div class="second-row">
      <a href="/micro-3D-Printing" class="column-link">
-    <picture>
-      <source srcset="media/MicroPrints.webp" type="image/webp">
-      <img src="media/MicroPrints.png" alt="Second Banner Image" class="banner">
-    </picture>
+      <img src="media/MicroPrints.webp" alt="Second Banner Image" class="banner">
      </a>
-    <img src="logos/fullcontrol.png" alt="Second Logo Overlay" class="logo-overlay">
-    <img src="logos/durham.png" alt="Logo Above" class="logo-above">
+    <img src="logos/fullcontrol.webp" alt="Second Logo Overlay" class="logo-overlay">
+    <img src="logos/durham.webp" alt="Logo Above" class="logo-above">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
   <!-- Third Row -->
   <div class="third-row">
-    <picture>
-      <source srcset="media/IoT.webp" type="image/webp">
       <img src="media/IoT.webp" alt="Third Banner Image" class="banner">
-    </picture>
-    <img src="logos/swansea.png" alt="Third Logo Overlay" class="logo-overlay">
+    <img src="logos/swansea.webp" alt="Third Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
    <!-- Fourth Row -->
  <div class="fourth-row">
   <a href="/koth" class="column-link">
-    <picture>
-      <source srcset="media/KOTH.webp" type="image/webp">
       <img src="media/KOTH.webp" alt="Fourth Banner Image" class="banner">
-    </picture>
   </a>
 </div>
 
@@ -90,19 +78,14 @@
   <div class="divider"></div>
      <!-- Fifth Row -->
   <div class="fifth-row">
-    <picture>
-      <source srcset="media/gingerbread.webp" type="image/webp">
       <img src="media/gingerbread.webp" alt="Fifth Banner Image" class="banner">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
    <!-- Sixth Row -->
   <div class="sixth-row">
-    <picture>
-      <source srcset="media/civildesign.webp" type="image/webp">
       <img src="media/civildesign.webp" alt="Sixth Banner Image" class="banner">
-   </picture>
-    <img src="logos/durham.png" alt="Sixth Logo Overlay" class="logo-overlay">
+    <img src="logos/durham.webp" alt="Sixth Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
