--- a/koth/index.html
+++ b/koth/index.html
@@ -47,7 +47,7 @@
   
   <div class="container">
     <!-- Title Image -->
-    <img src="../logos/kothlogo.png" alt="KOTH logo" class="title-image">
+    <img src="../logos/kothlogo.webp" alt="KOTH logo" class="title-image">
 
     <!-- Body Text -->
     <p class="body-text">
@@ -57,19 +57,19 @@
     <!-- Container for the small images and captions -->
   <div class="image-container">
     <div class="image-item">
-      <img src="../media/koth1.png" alt="Image 1" class="small-image">
+      <img src="../media/koth1.webp" alt="Image 1" class="small-image">
       <p class="image-caption">8+</p>
     </div>
     <div class="image-item">
-      <img src="../media/koth2.png" alt="Image 2" class="small-image">
+      <img src="../media/koth2.webp" alt="Image 2" class="small-image">
       <p class="image-caption">2-4 Players</p>
     </div>
     <div class="image-item">
-      <img src="../media/koth3.png" alt="Image 3" class="small-image">
+      <img src="../media/koth3.webp" alt="Image 3" class="small-image">
       <p class="image-caption">30-60 Mins</p>
     </div>
     <div class="image-item">
-      <img src="../media/koth4.png" alt="Image 4" class="small-image">
+      <img src="../media/koth4.webp" alt="Image 4" class="small-image">
       <p class="image-caption">35cm x 35cm</p>
     </div>
   </div>
@@ -86,7 +86,7 @@
   <!-- Image Row -->
   <div class="image-row">
     <img src="../media/kothfront.png" alt="First Side Image" class="clickable-image">
-    <img src="../media/kothback.png" alt="Second Side Image" class="clickable-image">
+    <img src="../media/kothback.webp" alt="Second Side Image" class="clickable-image">
   </div>
 </div>
 
@@ -96,7 +96,7 @@
     </div>
 
     <!-- Centered PNG Image -->
-    <img src="../media/kothimage.jpg" alt="Centered Image" class="centered-image">
+    <img src="../media/kothimage.webp" alt="Centered Image" class="centered-image">
   </div>
 </head>
   
@@ -123,7 +123,7 @@
   </p>
 
   <div class="kothdiagram-container">
-  <img src="../media/kothboarddiagram.png" class="kothdiagram-image" alt="Kothdiagram">
+  <img src="../media/kothboarddiagram.webp" class="kothdiagram-image" alt="Kothdiagram">
 </div>
 
 
@@ -135,7 +135,7 @@
 
    <!-- Second image: Kothcard, placed above the title -->
       <div class="kothcard-container">
-        <img src="../media/kothcard.png" class="kothcard-image" alt="Kothcard">
+        <img src="../media/kothcard.webp" class="kothcard-image" alt="Kothcard">
       </div>
 
   <!-- Third Title and Text -->
@@ -150,7 +150,7 @@
   </div>
 
     <!-- Bottom Image (Not part of the lightbox) -->
-    <img src="../media/kothlandscape.png" alt="Bottom Image" class="bottom-image">
+    <img src="../media/kothlandscape.webp" alt="Bottom Image" class="bottom-image">
 
   </div>
 
