--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -49,7 +49,7 @@
         <!-- Left Section (Logo, Text Box + Button) -->
 <div class="text-box">
     <!-- Logo -->
-    <img src="../media/micro.png" alt="MicroLogo" class="Micrologo">
+    <img src="../media/micro.webp" alt="MicroLogo" class="Micrologo">
 
     <!-- Text Content -->
     <p class="text-content">
@@ -74,11 +74,11 @@
         <h2>Example Mesh Designs</h2>
         <div class="timeline-events">
             <div class="timeline-event">
-                <img src="../media/mesh1.png" alt="Event 1">
+                <img src="../media/mesh1.webp" alt="Event 1">
                 <p>A TPU dodecagonal mesh; 960 strings</p>
             </div>
           <div class="timeline-event">
-              <img src="../media/mesh2.png" alt="Event 2">
+              <img src="../media/mesh2.webp" alt="Event 2">
               <p>
                   A mesh made from 
                   <a href="https://fiberlogy.com/en/fiberlogy-filaments/filament-fiberflex-40d/" target="_blank" style="color: #93aacc; text-decoration: none;">
@@ -88,7 +88,7 @@
               </p>
           </div>
             <div class="timeline-event">
-                <img src="../media/mesh3.png" alt="Event 3">
+                <img src="../media/mesh3.webp" alt="Event 3">
                 <p> Layers of stacked TPU meshes acting as a liquid filter; 2700 strings in total</p>
             </div>
             <!-- Add more events as needed -->
@@ -102,9 +102,9 @@
         <span class="mesh-arrow">⬇</span>
     </div>
     <!-- Initial Image -->
-    <img src="../media/mesh.png" alt="Initial Image" class="mesh-image" id="initial-image">
+    <img src="../media/mesh.webp" alt="Initial Image" class="mesh-image" id="initial-image">
     <!-- Replacement Image (Zoomed-in) -->
-    <img src="../media/meshcloseup.png" alt="Zoomed-in Image" class="mesh-image mesh-hidden" id="zoomed-image">
+    <img src="../media/meshcloseup.webp" alt="Zoomed-in Image" class="mesh-image mesh-hidden" id="zoomed-image">
     <!-- GIF -->
     <img src="../media/meshanimation.gif" alt="Animation GIF" class="mesh-gif mesh-hidden" id="animation-gif">
 </div>
