--- a/micro-3D-Printing/index.html
+++ b/micro-3D-Printing/index.html
@@ -102,7 +102,7 @@
         <span class="mesh-arrow">⬇</span>
     </div>
     <!-- Initial Image -->
-    <img src="../media/mesh.webp" alt="Initial Image" class="mesh-image" id="initial-image">
+    <img src="../media/mesh.png" alt="Initial Image" class="mesh-image" id="initial-image">
     <!-- Replacement Image (Zoomed-in) -->
     <img src="../media/meshcloseup.webp" alt="Zoomed-in Image" class="mesh-image mesh-hidden" id="zoomed-image">
     <!-- GIF -->
