--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="divider"></div>
   <!-- Second Row -->
   <div class="second-row">
-     <a href="/micro-3D-Printing" class="column-link">
+     <a href="/microprints" class="column-link">
       <img src="media/MicroPrints.webp" alt="Second Banner Image" class="banner">
      </a>
     <img src="logos/fullcontrol.webp" alt="Second Logo Overlay" class="logo-overlay">
@@ -61,7 +61,9 @@
   <div class="divider"></div>
   <!-- Third Row -->
   <div class="third-row">
+    <a href="/active-ageing" class="column-link">
       <img src="media/IoT.webp" alt="Third Banner Image" class="banner">
+    </a>
     <img src="logos/swansea.webp" alt="Third Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
