--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -45,13 +45,15 @@
 
   <!-- Page Content -->
 <div class="video-container">
-  <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/watch?v=J6tqZJRwWcQ" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen>
-  </iframe>
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/J6tqZJRwWcQ?controls=0" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen>
+    </iframe>
 </div>
 
