--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -56,4 +56,7 @@
 </iframe>
 </div>
 
+  <!-- Include the JavaScript file at the end of the body -->
+  <script src="main.js"></script>
 </body>
+</html>
