--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -57,6 +57,6 @@
 </div>
 
   <!-- Include the JavaScript file at the end of the body -->
-  <script src="main.js"></script>
+  <script src="../main.js"></script>
 </body>
 </html>
