--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -45,14 +45,16 @@
 
   <!-- Page Content -->
 <div class="video-container">
-<div class="video-container">
-    <iframe 
-        src="https://www.youtube.com/embed/J6tqZJRwWcQ?modestbranding=1&controls=0&showinfo=0&rel=0&autoplay=1" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
+<iframe 
+    width="560" 
+    height="315" 
+    src="https://www.youtube-nocookie.com/embed/J6tqZJRwWcQ?rel=0&modestbranding=1&controls=0" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
+</iframe>
+
 </div>
 
 </div>
