--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -45,15 +45,11 @@
 
   <!-- Page Content -->
 <div class="video-container">
-<iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube-nocookie.com/embed/J6tqZJRwWcQ?rel=0&modestbranding=1&controls=0" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    allowfullscreen>
-</iframe>
+    <video controls>
+        <source src="../media/activeageing.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
 
 </div>
 
