--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -45,6 +45,7 @@
 
   <!-- Page Content -->
 <div class="video-container">
+    <button class="read-paper-btn" onclick="openPaper()">Read Paper</button>
     <video controls>
         <source src="../media/activeageing.mp4" type="video/mp4">
         Your browser does not support the video tag.
