--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -45,7 +45,7 @@
 
   <!-- Page Content -->
 <div class="video-container">
-    <button class="read-paper-btn" onclick="openPaper()">Read Paper</button>
+    <a href="https://dl.acm.org/doi/abs/10.1145/3679318.3685410" class="read-paper-btn" target="_blank">Read Paper</a>
     <video controls>
         <source src="../media/activeageing.mp4" type="video/mp4">
         Your browser does not support the video tag.
