--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -44,6 +44,13 @@
 
 
   <!-- Page Content -->
+
+  <div class="page-container">
+    <!-- Logo Section -->
+    <div class="logo-container">
+        <img src="IoTtitle.png" alt="Logo" class="logo">
+    </div>
+    
 <div class="video-container">
     <a href="https://dl.acm.org/doi/abs/10.1145/3679318.3685410" class="read-paper-btn" target="_blank">Read Paper</a>
     <video controls>
