--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -48,7 +48,7 @@
   <div class="page-container">
     <!-- Logo Section -->
     <div class="logo-container">
-        <img src="IoTtitle.png" alt="Logo" class="logo">
+        <img src="../media/IoTtitle.png" alt="Logo" class="logo">
     </div>
     
 <div class="video-container">
