--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -45,14 +45,14 @@
 
   <!-- Page Content -->
 
-  <div class="page-container">
+  <div class="iot-page-container">
     <!-- Logo Section -->
-    <div class="logo-container">
-        <img src="../media/IoTtitle.png" alt="Logo" class="logo">
+    <div class="iot-logo-container">
+        <img src="../media/IoTtitle.png" alt="Logo" class="iot-logo">
     </div>
     
-<div class="video-container">
-    <a href="https://dl.acm.org/doi/abs/10.1145/3679318.3685410" class="read-paper-btn" target="_blank">Read Paper</a>
+<div class="iot-video-container">
+    <a href="https://dl.acm.org/doi/abs/10.1145/3679318.3685410" class="iot-read-paper-btn" target="_blank">Read Paper</a>
     <video controls>
         <source src="../media/activeageing.mp4" type="video/mp4">
         Your browser does not support the video tag.
