--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -52,7 +52,7 @@
     </div>
     
 <div class="iot-video-container">
-    <video controls>
+    <video controls autoplay muted loop>
         <source src="../media/activeageing.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
