--- a/koth/index.html
+++ b/koth/index.html
@@ -77,11 +77,12 @@
 <div class="gif-and-image-row-wrapper">
   <!-- GIF Section -->
   <div class="gif-container">
-    <img src="../media/king.webp" alt="GIF 1">
-    <img src="../media/knight.webp" alt="GIF 2">
-    <img src="../media/wizard.webp" alt="GIF 3">
-    <img src="../media/dragon.webp" alt="GIF 4">
+    <img src="../media/king.webp" alt="GIF 1" loop>
+    <img src="../media/knight.webp" alt="GIF 2" loop>
+    <img src="../media/wizard.webp" alt="GIF 3" loop>
+    <img src="../media/dragon.webp" alt="GIF 4" loop>
   </div>
+</div>
 
   <!-- Image Row -->
   <div class="image-row">
