--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -68,23 +68,23 @@
     <h2 class="section-title">Self Powered, low level sensors</h2>
 
     <!-- Image Row -->
-    <div class="image-row">
+    <div class="iot-image-row">
         <!-- Image 1 -->
         <div>
             <img src="../media/switch.webp" alt="Switch module">
-            <p class="image-caption">A switch to detect movement of doors & drawers</p>
+            <p class="iot-image-caption">A switch to detect movement of doors & drawers</p>
         </div>
 
         <!-- Image 2 -->
         <div>
             <img src="../media/photocell.webp" alt="Photocell module">
-            <p class="image-caption">A photocell to detect light</p>
+            <p class="iot-image-caption">A photocell to detect light</p>
         </div>
 
         <!-- Image 3 -->
         <div>
             <img src="../media/pir.webp" alt="PIR module">
-            <p class="image-caption">A passive infrared sensor
+            <p class="iot-image-caption">A passive infrared sensor
 to detect movement</p>
         </div>
     </div>
